Add page view counter at the bottom

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
                 <span class="status-indicator"></span>
                 <span class="status-text"></span>
             </div>
+            <div class="page-views" id="page-views">
+                <span class="views-icon">👁️</span>
+                <span class="views-label">頁面瀏覽次數：</span>
+                <span class="views-count" id="views-count">載入中...</span>
+            </div>
         </footer>
     </div>
 
