Add real-time page view updates with live indicator

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
                 <span class="views-icon">👁️</span>
                 <span class="views-label">頁面瀏覽次數：</span>
                 <span class="views-count" id="views-count">載入中...</span>
+                <span class="views-live-indicator" title="每10秒自動更新">🔴 LIVE</span>
             </div>
         </footer>
     </div>
