Add diagnostic tool button for Safari API testing and debugging

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>香港急症室等候時間</title>
-    <link rel="stylesheet" href="styles.css?v=6.0">
+    <link rel="stylesheet" href="styles.css?v=7.0">
 </head>
 <body>
     <!-- 加載畫面 -->
@@ -82,11 +82,12 @@
                 <span class="views-label">頁面瀏覽次數：</span>
                 <span class="views-count" id="views-count">載入中...</span>
                 <span class="views-live-indicator" title="每10秒自動更新">🔴 LIVE</span>
+                <button id="test-api-btn" class="test-api-btn" title="測試 API 連接">🔧</button>
             </div>
         </footer>
     </div>
 
-    <script src="app.js?v=6.0"></script>
+    <script src="app.js?v=7.0"></script>
 </body>
 </html>
 
