--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <title>香港急症室等候時間</title>
-    <link rel="stylesheet" href="styles.css?v=7.0">
+    <link rel="stylesheet" href="styles.css?v=8.0">
 </head>
 <body>
+    <!-- 導航欄 -->
+    <nav class="nav-bar">
+        <a href="index.html" class="nav-link active">
+            <span class="nav-icon">🏥</span>
+            <span>急症室等候時間</span>
+        </a>
+        <a href="prediction.html" class="nav-link">
+            <span class="nav-icon">📊</span>
+            <span>NDH 預測分析</span>
+        </a>
+    </nav>
+
     <!-- 加載畫面 -->
     <div id="loading-screen" class="loading-screen">
         <div class="loader"></div>
