--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <html lang="zh-HK">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>香港急症室等候時間</title>
-    <link rel="stylesheet" href="styles.css?v=8.0">
+    <meta name="description" content="香港急症室實時等候時間 - 18間醫院即時數據">
+    <meta name="theme-color" content="#667eea">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="急症室等候">
+    
+    <!-- Icons -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="manifest" href="manifest.json">
+    
+    <title>急症室等候時間</title>
+    <link rel="stylesheet" href="styles.css?v=1.1.5">
 </head>
 <body>
     <!-- 導航欄 -->
@@ -32,7 +45,7 @@
     <!-- 主頁面 -->
     <div id="main-content" class="main-content hidden">
         <header>
-            <h1>🏥 香港急症室等候時間</h1>
+            <h1>🏥 急症室等候時間</h1>
             <div class="current-time" id="current-time"></div>
             <div class="weather-info" id="weather-info">
                 <span id="weather-temp"></span>
