--- a/prediction.html
+++ b/prediction.html
@@ -2,11 +2,24 @@
 <html lang="zh-HK">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <title>NDH AED 病人數量預測 | 北區醫院急症室</title>
-    <link rel="stylesheet" href="styles.css?v=1.1.4">
-    <link rel="stylesheet" href="prediction.css?v=1.1.4">
+    <meta name="description" content="NDH AED 病人數量預測系統 - 北區醫院急症室人流預測">
+    <meta name="theme-color" content="#1a1a2e">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="NDH預測">
+    
+    <!-- Icons -->
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="manifest" href="manifest.json">
+    
+    <title>NDH 預測分析 | 急症室等候時間</title>
+    <link rel="stylesheet" href="styles.css?v=1.1.5">
+    <link rel="stylesheet" href="prediction.css?v=1.1.5">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
 </head>
