--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#667eea">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="急症室等候">
+    <meta name="apple-mobile-web-app-title" content="急症室等候時間">
     
     <!-- Icons -->
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
@@ -20,7 +20,7 @@
     <link rel="manifest" href="manifest.json">
     
     <title>急症室等候時間</title>
-    <link rel="stylesheet" href="styles.css?v=1.2.0">
+    <link rel="stylesheet" href="styles.css?v=1.2.1">
 </head>
 <body>
     <!-- 加載畫面 -->
